This file shows a history of changes between PrBoom versions since v2.1.0.
For historical reference, the complete LxDoom changelog follows it.

Changes from v2.4.1 to v2.4.2
- Make screen wipe time independent of resolution
- Applied various small cleanups and fixes from PrBoom 2.3.1
- Fix problems with dehacked substitution of long strings

Changes from v2.4.0 to v2.4.1
- PrBoom demos are now recorded with high-precision turning (like the
  "Doom v1.91" hack that is floating around)
- when both -nodraw and -nosound are supplied, then no graphics will be
  initialized and no windows opened
- add ultdoom compatibility level, and bring compatibility levels into line
  with Prboom+
- screenshots now use correct palette in software mode
- screenshots now in PNG format on Linux/Unix where available
- suppress use-supershotgun key in compatibility mode
- removed obsolete video related code
- fix screenshots on 64bit systems
- fix comp_666

Changes from v2.2.6 to v2.4.0
- emulate reject overflows and spechit overflows - from prboom-plus
- more original doom compatibility options
- improve stretched graphics drawing for hires
- fix super-shotgun reload on last shot
- fix compilation with gcc 4.x
- fix some more dehacked support problems (e.g. Hacx)
- fix crash if pwad contains zero-length sound lumps
- added possibility to use mmap for wad access, this leads to less memory usage
- simplified the memory handling
- removed old Doom v1.2 lumps from prboom.wad
- windows also uses prboom.wad now
- add Mac OS X bundle build
- removed lumps and tables which are in prboom.wad from source

Changes from v2.2.5 to v2.2.6
- fix Inferno intermission screen crash
- fix lockup for other netgame clients when one client quits
- fix memory leak in netgame server
- fix SDL_LockScreen crashes on Win32
- fix fuzz drawing for hi-res
- network games should survive temporary loss of connection
- fix dehacked NOSECTOR/NOBLOCKMAP effects
- fix player spawn sound

Changes from v2.2.4 to v2.2.5